Resolves solidusio/solidus#3227 Merge promotion rule error messages to handle case when more than one rule fails.
